@@ -4,6 +4,10 @@ the top of this file before committing any changes.
 
 Al
 ------------------------------------------------------------------------------
+Tue Sep 14 19:29 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* Fixed types of all string lengths in namei code to size_t.
+
 Tue Sep 14 19:27 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* Fix type of task->child_wait by Thomas McWilliams.
